# StrataDock

./: .gitignore  README.md  Start_StrataDock.bat  StrataDock_Info.txt  app.py  app_backup_before_dialect.py  pyproject.toml  run.sh  run_stratadock.sh  setup.sh  setup_ubuntu.sh  streamlit_app.py
assets/: molecular_bg_b64.txt
data/validation/: index.json
data/validation/abl_kinase_1iep/: ligand_input.sdf  manifest.json
data/validation/egfr_1m17/: ligand_input.sdf  manifest.json
docs/: clean_unicode.py  generate_manual.py
ligands/: test_drugs.smi
scripts/: README.md
scripts/dev/: run_comprehensive_settings.py
scripts/install/: check_environment.py  download_gnina.py  download_validation_data.py  download_vina.py
scripts/user/: download_pdb.py  export_session.py  inspect_receptor.py  make_box.py  run_batch.py  run_single.py  suggest_pockets.py
scripts/validation/: check_validation_data.py  run_validation_all.py  run_validation_case.py
src/stratadock/: __init__.py
tests/: test_admet.py  test_batch.py  test_boxes.py  test_diagnostics.py  test_diagnostics_backends.py  test_docking.py  test_evaluate_existing_run.py  test_gnina.py  test_hardware.py  test_interactions.py  test_ligand_prep_options.py  test_pdb_download.py  test_pdb_ligand_detection.py  test_pipeline_prep.py  test_pockets.py  test_pose_images.py  test_preview.py  test_receptor_prep_options.py  test_reference_ligand_box.py  test_reports.py  test_run_history.py  test_session.py  test_structure_prediction.py  test_ui.py  test_ui_tables.py  test_validation_data.py  test_visualization.py
(+35 files in other folders)
